Update DirectGraph.java